CREATE TABLE "matches" (
  "id" integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  "stadium" varchar,
  "home_team" varchar,
  "away_team" varchar,
  "date_time" timestamp
);

CREATE TABLE "areas" (
  "id" integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  "name" varchar
);

CREATE TABLE "sections" (
  "id" integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  "area_id" integer,
  "name" varchar
);

CREATE TABLE "blocks" (
  "id" integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  "section_id" integer,
  "name" varchar
);

CREATE TABLE "seats" (
  "id" integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  "block_id" integer,
  "row_number" integer,
  "seat_number" integer
);

CREATE TABLE "allocations" (
  "id" integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  "match_id" integer NOT NULL,
  "seat_id" integer NOT NULL,
  "state" varchar NOT NULL,
  "hold_expires_at" timestamp,
  "updated_at" timestamp
);

CREATE UNIQUE INDEX ON "allocations" ("match_id", "seat_id");
CREATE INDEX ON "allocations" ("match_id", "updated_at");

ALTER TABLE "allocations" ADD FOREIGN KEY ("match_id") REFERENCES "matches" ("id");
ALTER TABLE "allocations" ADD FOREIGN KEY ("seat_id") REFERENCES "seats" ("id");
ALTER TABLE "seats" ADD FOREIGN KEY ("block_id") REFERENCES "blocks" ("id");
ALTER TABLE "blocks" ADD FOREIGN KEY ("section_id") REFERENCES "sections" ("id");
ALTER TABLE "sections" ADD FOREIGN KEY ("area_id") REFERENCES "areas" ("id");